# Reduct

./: .clangd  .gitignore  CMakeLists.txt  README.md  ReductConfig.cmake.in  gen_doxy.sh  reduct.pc.in  run_bench.sh  run_tests.sh
.github/workflows/: release.yml  static.yml  test.yml
bench/: brainfuck.rdt  brainfuck.red  fib20.lua  fib20.py  fib20.scon  fib30.lua  fib30.py  fib30.scon  fib35.janet  fib35.rdt  fib35.red  fib65.janet  fib65.rdt  fib65.red  fizzbuzz.janet  mandelbrot.rdt  mandelbrot.red
examples/: importer.rdt  module.c
include/reduct/: atom.h  bitmap.h  closure.h  compile.h  core.h  defs.h  disasm.h  error.h  eval.h  function.h  gc.h  handle.h  inst.h  intrinsic.h  item.h  list.h  native.h  parse.h  reduct.h  standard.h  stringify.h
meta/doxy/: Doxyfile  header.html
reduct/: atom.h  atom_impl.h  char.h  char_impl.h  closure.h  closure_impl.h  compile.h  compile_impl.h  core.h  core_impl.h  defs.h  disasm.h  disasm_impl.h  error.h  error_impl.h  eval.h  eval_impl.h  function.h  function_impl.h  gc.h  gc_impl.h  handle.h  handle_impl.h  inst.h  intrinsic.h  intrinsic_impl.h  item.h  item_impl.h  list.h  list_impl.h  native.h  native_impl.h  parse.h  parse_impl.h  reduct.h  standard.h  standard_impl.h  stdlib.h  stdlib_impl.h  stringify.h  (+1 more)
scon/: atom_impl.h  atom_internal.h  char_internal.h  compile.h  compile_api.h  compile_impl.h  compile_internal.h  core.h  core_api.h  core_impl.h  core_internal.h  disasm_api.h  disasm_impl.h  disasm_internal.h  inst.h  item_api.h  item_impl.h  item_internal.h  keyword_impl.h  list_impl.h  list_internal.h  parse_api.h  parse_impl.h  parse_internal.h  scon.h
src/: atom.c  char.c  closure.c  compile.c  core.c  disasm.c  error.c  eval.c  function.c  gc.c  handle.c  intrinsic.c  item.c  list.c  native.c  parse.c  standard.c  stringify.c
tests/: 01_variables_scope.rdt  01_variables_scope.red  01_variables_scope.scon  02_control_flow_logic.rdt  02_control_flow_logic.red  02_control_flow_logic.scon  03_functions_higher_order.rdt  03_functions_higher_order.red  03_functions_higher_order.scon  04_sequences.rdt  04_sequences.red  05_string_manipulation.rdt  05_string_manipulation.red  06_introspection.rdt  06_introspection.red  07_type_casting.rdt  07_type_casting.red  08_system_environment.rdt  08_system_environment.red  09_math_trigonometry.rdt  09_math_trigonometry.red  run_tests.sh
tools/reduct-cli/: CMakeLists.txt  fuzz.c  fuzz_eval.c  fuzz_parse.c  reduct.c  reduct_version.h.in
tools/reduct-vscode/: language-configuration.json  package.json
tools/reduct-vscode/syntaxes/: reduct.tmLanguage.json
tools/scon/: CMakeLists.txt  scon.c
tools/scon-vscode/: language-configuration.json  package.json
tools/scon-vscode/syntaxes/: scon.tmLanguage.json
